Inverting dependency of Metric

--- a/src/ComponentCouplingMetric.Test/ComponentCouplingMetric.Test.csproj
+++ b/src/ComponentCouplingMetric.Test/ComponentCouplingMetric.Test.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ComponentCouplingMetric.Core\ComponentCouplingMetric.Core.csproj" />
+    <ProjectReference Include="..\ComponentCouplingMetric\ComponentCouplingMetric.csproj" />
   </ItemGroup>
 
 </Project>
